# atcoder-rust-base

./: Cargo.toml
src/: main.rs
tests/: sample_inputs.rs
