# -*- coding:utf-8-unix -*-

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# AtCoder 2023/1 Language Update
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/Jan-2023-Language-Update-%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA%E6%A1%88
# WIP. Versions are up-to-date.
# New packages are only partially added.

#ac-library-rs = "=0.1.1"

# AtCoder 2020年言語アップデート以降に使用できるクレート。
# 次のページに各クレートについての細かい紹介があります。
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
#num = "=0.4.1"
#num-bigint = "=0.4.3"
#num-complex = "=0.4.3"
#num-integer = "=0.1.45"
#num-iter = "=0.1.43"
#num-rational = "=0.4.1"
#num-traits = "=0.2.15"

# `num-traits`の自動実装
#num-derive = "=0.4.0"

# NumPyの`ndarray`のような多次元配列
#ndarray = "=0.15.6"

# 線形代数
#nalgebra = "=0.32.3"

# (線形)代数の抽象化
#alga = "=0.9.3"

# libmのRust実装
#libm = "=0.2.7"

# 乱数
#rand = { version = "=0.8.5", features = ["small_rng"] }
#getrandom = "=0.2.10"
#rand_chacha = "=0.3.1"
#rand_core = "=0.6.4"
#rand_hc = "=0.3.2"
#rand_pcg = "=0.3.1"

# 乱数の分布の追加
#rand_distr = "=0.4.3"

# グラフ
#petgraph = "=0.6.3"

# 挿入順を保持するhash table
#indexmap = "=2.0.0"

# 正規表現
#regex = "=1.9.1"

# staticアイテムの遅延初期化
#lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
#ordered-float = "=3.7.0"

# ASCII文字列
#ascii = "=1.1.0"

# permutation
#permutohedron = "=0.2.4"

# スライスの拡張
#superslice = "=1.0.0"

# イテレータの拡張
#itertools = "=0.11.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
#itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
#maplit = "=1.0.2"

# 即席enum `Either<L, R>`
#either = "=1.8.1"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
#im-rc = "=15.1.0"

# 可変長bit set
#fixedbitset = "=0.4.2"

# 可変長bit set
#bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.4.5", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
#text_io = "=0.1.12"

# 高速なハッシュ関数
#rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
#smallvec = "=1.11.0"

# ---------------------------------------------------------------------

[dev-dependencies]
cli_test_dir = "0.1"
